--- a/BringTheWashingIn!/pages/index/index.wxss
+++ b/BringTheWashingIn!/pages/index/index.wxss
@@ -1,5 +1,77 @@
 /**index.wxss**/
-.container{
-  margin-top: 300rpx;
+.temp{
+  /* margin-top: 300rpx; */
   text-align: center;
+  font-size: 200rpx;
+  line-height: 240rpx;
+  opacity: 0.8;
+}
+.weather{
+  text-align: center;
+  font-size: 40rpx;
+  line-height: 56rpx;
+}
+
+.weather-wrapper{
+  position: relative;
+  padding-top: 170rpx;
+  padding-bottom: 254rpx;
+  /* background-color: red; */
+}
+
+.weather-bg{
+  position: absolute;
+  z-index: -1; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.timetips{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40rpx;
+}
+
+.timetips-icon {
+  margin-right: 10rpx;
+  width: 36rpx;
+  height: 28rpx;
+}
+
+.timetips-text {
+  font-size: 30rpx;
+  line-height: 42rpx;
+  opacity: 0.5;
+}
+
+.forecast-list {
+  display: flex;
+}
+
+.forecast-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 120rpx;
+  margin-top: 45rpx;
+  flex-shrink: 0;
+}
+.forecast-time {
+  font-size: 40rpx;
+  line-height: 56rpx;
+}
+
+.forecast-weather {
+  margin-top: 50rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.forecast-temp {
+  margin-top: 46rpx;
+  line-height: 56rpx;
+  font-size: 40rpx;
 }
