--- a/BringTheWashingIn!/pages/index/index.wxml
+++ b/BringTheWashingIn!/pages/index/index.wxml
@@ -4,6 +4,11 @@
   <view class="weather">{{weather}}</view>
   <image class="weather-bg" 
    mode="scaleToFill" src="{{weatherBackgroudImage}}"></image>
+  <view class="day-weather" bindtap="onTapDayWeather">
+    <view class="day-text">{{todayDate}}</view>
+    <view class="temp-text">{{todayTemp}}</view>
+    <image class="arrow-icon" src="/images/arrow.png"></image>
+  </view>
 </view>
 
 <view class="timetips">
@@ -12,7 +17,7 @@
 </view>
 <scroll-view scroll-x>
   <view class="forecast-list">
-    <view class="forecast-item" wx:for="{{forecast}}">
+    <view class="forecast-item" wx:for="{{forecast}}" wx:key="forecast">
       <view class= 'forecast-time'> {{item.time}}</view>
       <image class= 'forecast-weather' src='{{item.iconPath}}'></image>
       <view class= 'forecast-temp'>{{item.temp}}</view>
