--- a/BringTheWashingIn!/pages/index/index.wxml
+++ b/BringTheWashingIn!/pages/index/index.wxml
@@ -1,5 +1,12 @@
 <!--index.wxml-->
 <view class="weather-wrapper">
+  <view class="location-wrapper">
+    <view class="location">
+      <image class="location-icon" src="/images/location-icon.png"></image>
+      <view class="location-text">北京市</view>
+    </view>
+    <view class="location-tips">点击获取当前位置</view>
+  </view>
   <view class="temp">{{temp}}</view>
   <view class="weather">{{weather}}</view>
   <image class="weather-bg" 
